# neural_nets

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/numerical/: mod.rs
src/package/: convolution.rs  create_matrix.rs  gradient.rs  linear_regression.rs  logistic_regression.rs  mod.rs
src/package/regression/: linear_regression.rs  logistic_regression.rs  mod.rs  regression_trait.rs
