[package]
name = "neural_nets"
version = "0.1.0"
edition = "2021"
authors = ["Demetrius <demetrius.mp789@gmail.com>"]
description = "My study on neural networks during my Computer Science MSc."
readme = "README.md"
repository = "https://github.com/demetrius-mp/numerical"
license-file = "LICENSE.txt"
keywords = ["ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
